--- a/src/app/pages/speed-calc/speed-calculator-mobile/speed-calculator-mobile.component.scss
+++ b/src/app/pages/speed-calc/speed-calculator-mobile/speed-calculator-mobile.component.scss
@@ -90,7 +90,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 0.5em;
-  padding: 0.5em 0.75em;
+  padding: 1em 0.75em 1.0em 0.75em;
   background-color: var(--background);
 }
 
